--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ h3 {
   font-size: 1.87rem;
   font-weight: 600;
 }
+h5 {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+p {
+  color: #707070;
+}
 /* css for button  */
 .btn {
   font-weight: 500;
@@ -30,11 +38,19 @@ h3 {
 /* css for carousel  */
 .carousel {
   padding: 20px 30px;
-  /* background-color: black; */
+  background-image: url(images/bg/center-bg.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 6%;
+}
+.carousel-bg {
+  background-image: url(images/bg/left-bg.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 8%;
 }
 
 .carousel p {
-  color: #707070;
   margin-top: 20px;
   margin-bottom: 20px;
   font-size: 1.125rem;
@@ -43,17 +59,14 @@ h3 {
   bottom: -50px;
 }
 .carousel-indicators li {
-  width: 15px;
   background-color: #cecece;
+  width: 15px;
   height: 8px;
-  border-radius: 10px;
-  margin-top: 20px;
 }
 .carousel-indicators li.active {
   opacity: 1;
   background-image: linear-gradient(45deg, #ff9c35, #ffd019);
-  width: 35px;
-  border-radius: 25%;
+  width: 30px;
 }
 
 /* css for smartphone area  */
@@ -65,20 +78,12 @@ h3 {
   border-radius: 10px;
 }
 .card img {
-  width: 280px;
-  height: 280px;
-  margin: 15px auto;
-}
-.card h5 {
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin-bottom: 15px;
-  font-weight: 600;
+  margin: 10px auto;
 }
 
 .card p {
   font-size: 1rem;
-  color: #707070;
+
   margin-top: 20px;
   margin-bottom: 30px;
 }
@@ -117,12 +122,7 @@ h3 {
   margin-bottom: 30px;
   margin-right: 30px;
 }
-.categories h5 {
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin-top: 15px;
-  font-weight: 600;
-}
+
 /* css for contact us  */
 #contact {
   box-shadow: 5px 5px 18px lightgrey;
@@ -155,4 +155,16 @@ h3 {
   color: #ffe7e7;
   opacity: 1;
   font-weight: 300;
+}
+/* css for footer are  */
+footer a {
+  font-size: 1.37rem;
+  color: #ff9d00;
+}
+footer a:hover {
+  font-size: 1.37rem;
+  color: #ff9d00;
+}
+.container:last-of-type {
+  margin-bottom: 10px;
 }
